--- a/public/patients.html
+++ b/public/patients.html
@@ -122,6 +122,30 @@
             </div>
 
             <div class="form-group">
+              <label for="weight">น้ำหนัก (kg)</label>
+              <input
+                type="number"
+                id="weight"
+                name="weight"
+                step="0.1"
+                min="1"
+                max="300"
+              />
+            </div>
+
+            <div class="form-group">
+              <label for="height">ส่วนสูง (cm)</label>
+              <input
+                type="number"
+                id="height"
+                name="height"
+                step="0.1"
+                min="50"
+                max="250"
+              />
+            </div>
+
+            <div class="form-group">
               <label for="phone"
                 >เบอร์โทร <span class="required">*</span></label
               >
