--- a/public/login.html
+++ b/public/login.html
@@ -6,10 +6,10 @@
     <title>เข้าสู่ระบบ - ระบบจัดการจัดการห้องพยาบาล</title>
     <link rel="stylesheet" href="/css/login.css" />
   </head>
+
   <body>
     <div class="login-container">
-      <div class="logo">
-        <div class="logo-icon">🏥</div>
+      <div class="IMS">
         <h1>ระบบการจัดการห้องพยาบาล</h1>
         <p class="subtitle">Infirmary Management System</p>
       </div>
